--- a/pizza-app/src/auth_config.json
+++ b/pizza-app/src/auth_config.json
@@ -1,5 +1,6 @@
 {
  "domain": "danvyle.auth0.com",
- "clientId": "o1JqB5SW9z85ulns3Qxr8qWoe07093gS"
+ "clientId": "o1JqB5SW9z85ulns3Qxr8qWoe07093gS",
+ "audience": "https://localhost:8888"
 }
 
