--- a/pizza-app/package.json
+++ b/pizza-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "googleapis": "^47.0.0",
     "jwks-rsa": "^1.6.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
@@ -38,6 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
+  },
   "proxy": "http://localhost:8888"
 }
